--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <h1>Benjamin Johnston's Portfolio</h1>
         <h2>Cyber Security Graduate</h2>
         <hr><p></p>
-        <a href="public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
+        <a href="html-portfolio/public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
         <p></p>
         <img src="assets/images/topMoviesProject.png" height="300" width="300" alt="top movies project">
         <p></p>
         <hr><hr>
-        <a href="public/birthday-invite.html"><h2>Birthday Invite Project</h2></a>
+        <a href="html-portfolio/public/birthday-invite.html"><h2>Birthday Invite Project</h2></a>
         <img src="assets/images/birthdayInviteProject.png" height="300" width="300" alt="birthday invite project">
         <p></p><hr><hr><p></p>
         <a href="../4.3 HTML Porfolio Project/public/about.html">About Me</a> 
